Added the anon user layout and default handler pages for errors

--- a/SchulCloud.Server/appsettings.json
+++ b/SchulCloud.Server/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Localization": {
+    "SupportedCultures": [
+      "en",
+      "de"
+    ]
+  },
+  "Presentation": {
+    "ApplicationName": "SchulCloud"
+  }
 }
