--- a/SchulCloud.Server/SchulCloud.Server.csproj
+++ b/SchulCloud.Server/SchulCloud.Server.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazor.Bootstrap" Version="2.2.0" />
     <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.6" />
     <PackageReference Include="Microsoft.Extensions.Localization" Version="8.0.6" />
@@ -22,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Components\Bootstrap\" />
     <Folder Include="wwwroot\img\" />
   </ItemGroup>
 
