Added database assembly and database manager using PostgreSQL db.

--- a/SchulCloud.AppHost/SchulCloud.AppHost.csproj
+++ b/SchulCloud.AppHost/SchulCloud.AppHost.csproj
@@ -7,13 +7,16 @@
     <Nullable>enable</Nullable>
     <IsAspireHost>true</IsAspireHost>
     <UserSecretsId>4465588b-99fc-48d3-8d41-9c3fc71ff5b5</UserSecretsId>
+    <StartupObject>SchulCloud.AppHost.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aspire.Hosting.AppHost" Version="8.0.0" />
+    <PackageReference Include="Aspire.Hosting.AppHost" Version="8.0.1" />
+    <PackageReference Include="Aspire.Hosting.PostgreSQL" Version="8.0.1" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\SchulCloud.DbManager\SchulCloud.DbManager.csproj" />
     <ProjectReference Include="..\SchulCloud.Server\SchulCloud.Server.csproj" />
   </ItemGroup>
 
