--- a/SchulCloud.DbManager/appsettings.json
+++ b/SchulCloud.DbManager/appsettings.json
@@ -6,8 +6,11 @@
       "Aspire.Hosting.Dcp": "Warning"
     }
   },
-  "Parameters": {
-    "postgresUsername": "<username>",
-    "postgresPassword": "<password>"
+  "DbInitializer": {
+    "DefaultUser": {
+      "Name": "<name>",
+      "Email": "<email>",
+      "Password": "<password>"
+    }
   }
 }
