--- a/SchulCloud.Server/SchulCloud.Server.csproj
+++ b/SchulCloud.Server/SchulCloud.Server.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.1" />
     <PackageReference Include="Blazor.Bootstrap" Version="2.2.0" />
     <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.6" />
@@ -19,11 +20,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SchulCloud.Client\SchulCloud.Client.csproj" />
+    <ProjectReference Include="..\SchulCloud.Database\SchulCloud.Database.csproj" />
     <ProjectReference Include="..\SchulCloud.ServiceDefaults\SchulCloud.ServiceDefaults.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Components\Bootstrap\" />
     <Folder Include="wwwroot\img\" />
   </ItemGroup>
 
