--- a/SchulCloud.Server/Properties/launchSettings.json
+++ b/SchulCloud.Server/Properties/launchSettings.json
@@ -23,6 +23,7 @@
         "commandName": "Project",
         "dotnetRunMessages": true,
         "launchBrowser": true,
+        "launchUrl": "account/security",
         "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
         "applicationUrl": "https://localhost:7004;http://localhost:5066",
         "environmentVariables": {
