Update every NuGet package to the newest full version exception Bootstrap.Blazor was updated to 3.0.0-Preview1.

--- a/SchulCloud.AppHost/SchulCloud.AppHost.csproj
+++ b/SchulCloud.AppHost/SchulCloud.AppHost.csproj
@@ -11,8 +11,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aspire.Hosting.AppHost" Version="8.0.1" />
-    <PackageReference Include="Aspire.Hosting.PostgreSQL" Version="8.0.1" />
+    <PackageReference Include="Aspire.Hosting.AppHost" Version="8.0.2" />
+    <PackageReference Include="Aspire.Hosting.PostgreSQL" Version="8.0.2" />
+    <PackageReference Include="Blazor.Bootstrap" Version="3.0.0-preview.1" />
   </ItemGroup>
 
   <ItemGroup>
