Maked the custom bootstrap component inhereit from BlazorBootstrapComponentBase. An used them in Sign in and password change. Improved their directory and added some more components to provide bootstrap validation for edit forms.

--- a/SchulCloud.Server/bundleconfig.json
+++ b/SchulCloud.Server/bundleconfig.json
@@ -1,7 +1,8 @@
 [
   {
-    "outputFileName": "wwwroot/js/main.min.js",
+    "outputFileName": "wwwroot/js/bundle.min.js",
     "inputFiles": [
+      "wwwroot/js/blazorBootstrap-extensions.js",
       "wwwroot/js/main.js"
     ]
   }
