--- a/SchulCloud.Server/appsettings.Development.json
+++ b/SchulCloud.Server/appsettings.Development.json
@@ -1,8 +1,11 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Debug",
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Warning",
+      "Microsoft.EntityFrameworkCore.Query": "Warning",
+      "Microsoft.Extensions.Localization.ResourceManagerStringLocalizer": "Warning"
     }
   }
 }
