-Feature: Turned the password change modal into its own page. -Fix: Renamed the placeholder json property of the default user's username (DbInitializer config).

--- a/SchulCloud.DbManager/appsettings.json
+++ b/SchulCloud.DbManager/appsettings.json
@@ -9,7 +9,7 @@
   },
   "DbInitializer": {
     "DefaultUser": {
-      "Name": "<name>",
+      "Username": "<name>",
       "Email": "<email>",
       "Password": "<password>"
     }
