-Feature: Added a MailDev resource to the aspire hosting. -Feature: Added a MailKit.Client project to communicate with a smtp server for sending emails. -Improvement: Created a new interface for sending emails.

--- a/SchulCloud.AppHost/SchulCloud.AppHost.csproj
+++ b/SchulCloud.AppHost/SchulCloud.AppHost.csproj
@@ -18,6 +18,7 @@
   <ItemGroup>
     <ProjectReference Include="..\SchulCloud.DbManager\SchulCloud.DbManager.csproj" />
     <ProjectReference Include="..\SchulCloud.Web\SchulCloud.Web\SchulCloud.Web.csproj" />
+    <ProjectReference Include="..\Aspire.Hosting.MailDev\Aspire.Hosting.MailDev.csproj" IsAspireProjectResource="false" />
   </ItemGroup>
 
 </Project>
