--- a/SchulCloud.Web/SchulCloud.Web/appsettings.Development.json
+++ b/SchulCloud.Web/SchulCloud.Web/appsettings.Development.json
@@ -7,5 +7,15 @@
       "Microsoft.EntityFrameworkCore.Query": "Warning",
       "Microsoft.Extensions.Localization.ResourceManagerStringLocalizer": "Warning"
     }
+  },
+  "Identity": {
+    "PasswordReset": {
+      "ResetTimeout": "0:0:5"
+    }
+  },
+  "MailKit": {
+    "Client": {
+      "KeepAliveIntervall": "0:0:50"     // MailDev terminates the connection after one minute.
+    }
   }
 }
