--- a/SchulCloud.Web/SchulCloud.Web/appsettings.json
+++ b/SchulCloud.Web/SchulCloud.Web/appsettings.json
@@ -7,6 +7,12 @@
     }
   },
   "AllowedHosts": "*",
+  "Identity": {
+    "EmailSender": {
+      "DisplayedName": "SchulCloud",
+      "Email": "no-reply@schulcloud"
+    }
+  },
   "Localization": {
     "SupportedCultures": [
       "en",
