--- a/SchulCloud.AppHost/appsettings.json
+++ b/SchulCloud.AppHost/appsettings.json
@@ -7,7 +7,9 @@
     }
   },
   "Parameters": {
-    "postgresUsername": "<username>",
-    "postgresPassword": "<password>"
+    "postgresUsername": "<postgres username>",
+    "postgresPassword": "<postgres password>",
+    "maildevUsername": "<maildev username>",
+    "maildevPassword": "<maildev password>"
   }
 }
