--- a/SchulCloud.Web/SchulCloud.Web/SchulCloud.Web.csproj
+++ b/SchulCloud.Web/SchulCloud.Web/SchulCloud.Web.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\MailKit.Client\MailKit.Client.csproj" />
     <ProjectReference Include="..\SchulCloud.Web.Client\SchulCloud.Web.Client.csproj" />
     <ProjectReference Include="..\..\SchulCloud.Database\SchulCloud.Database.csproj" />
     <ProjectReference Include="..\..\SchulCloud.ServiceDefaults\SchulCloud.ServiceDefaults.csproj" />
