-Chore: Removed unused IRequestState service. -Feature: Made all options accessable from configuration. -Style: All static files are now available under /_static.

--- a/SchulCloud.Web/SchulCloud.Web/appsettings.json
+++ b/SchulCloud.Web/SchulCloud.Web/appsettings.json
@@ -8,13 +8,28 @@
   },
   "AllowedHosts": "*",
   "Identity": {
+    "User": {
+      "RequireUniqueEmail": true
+    },
+    "SignIn": {
+      "RequireConfirmedEmail": true
+    },
     "EmailSender": {
       "DisplayedName": "SchulCloud",
       "Email": "no-reply@schulcloud"
     }
   },
-  "Localization": {
+  "RequestLocalization": {
+    "ApplyCurrentCultureToResponseHeaders": true,
+    "DefaultRequestCulture": {
+      "Culture": "en",
+      "UICulture": "en"
+    },
     "SupportedCultures": [
+      "en",
+      "de"
+    ],
+    "SupportedUICultures": [
       "en",
       "de"
     ]
