-Security: Added configuration to limit the lifespan of the pwd reset link to 2 hours. -Style: Box-shadow on wrong input on sign in page turned red. -Style: Improved the sizing of the password change form.

--- a/SchulCloud.Web/SchulCloud.Web/appsettings.json
+++ b/SchulCloud.Web/SchulCloud.Web/appsettings.json
@@ -17,6 +17,14 @@
     "EmailSender": {
       "DisplayedName": "SchulCloud",
       "Email": "no-reply@schulcloud"
+    },
+    "PasswordReset": {
+      "DisplayedTokenLifespan": "2:0:0"
+    },
+    "TokenProviders": {
+      "DataProtectionTokenProvider": {
+        "TokenLifespan": "2:0:0"
+      }
     }
   },
   "RequestLocalization": {
