-Fix: Added [Authorize]-attribute to the pwd change page. -Feature: -Added PgAdmin to the app host if the environment ist set to debug. -Feature: Added 2fa authenticator activation and deactivation.

--- a/SchulCloud.Web/SchulCloud.Web/appsettings.json
+++ b/SchulCloud.Web/SchulCloud.Web/appsettings.json
@@ -21,6 +21,9 @@
     "PasswordReset": {
       "DisplayedTokenLifespan": "2:0:0"
     },
+    "Tokens": {
+      "AuthenticatorIssuer": "SchulCloud"
+    },
     "TokenProviders": {
       "DataProtectionTokenProvider": {
         "TokenLifespan": "2:0:0"
