--- a/SchulCloud.Web/SchulCloud.Web/SchulCloud.Web.csproj
+++ b/SchulCloud.Web/SchulCloud.Web/SchulCloud.Web.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Humanizer.Core.de" Version="2.14.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.7" />
     <PackageReference Include="Microsoft.Extensions.Localization" Version="8.0.7" />
+    <PackageReference Include="QRCoder" Version="1.6.0" />
     <PackageReference Include="Suiram1.BlazorRoutesGenerator" Version="1.0.0" />
   </ItemGroup>
 
