-Improvement: Turned IPasswordResetLimiter into IRequestLimiter to make it usable as a global limiter. -Fix: Fixed the BsFieldCssProvider

--- a/SchulCloud.Web/SchulCloud.Web/appsettings.Development.json
+++ b/SchulCloud.Web/SchulCloud.Web/appsettings.Development.json
@@ -8,10 +8,8 @@
       "Microsoft.Extensions.Localization.ResourceManagerStringLocalizer": "Warning"
     }
   },
-  "Identity": {
-    "PasswordReset": {
-      "ResetTimeout": "0:0:5"
-    }
+  "RequestLimiter": {
+    "DefaultTimeout": "0:0:5"
   },
   "MailKit": {
     "Client": {
