-Fix: Fixed the confirmation modal when disabling 2fa. -Improvement: Used UserManager.Get{Property}Async as a instead of the user's property. -Config: Updated configuration to disable useless logs. -Config: Disabled opening browser on start. -Refactor: Renamed some localization keys. -Refactor: Run code clean-up

--- a/SchulCloud.Web/SchulCloud.Web/appsettings.Development.json
+++ b/SchulCloud.Web/SchulCloud.Web/appsettings.Development.json
@@ -3,8 +3,10 @@
     "LogLevel": {
       "Default": "Debug",
       "Microsoft.AspNetCore": "Warning",
-      "Microsoft.EntityFrameworkCore.Database.Command": "Warning",
       "Microsoft.EntityFrameworkCore.Query": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Connection": "Warning",
+      "Microsoft.WebTools.BrowserLink.Net.BrowserLinkMiddleware": "Information",
       "Microsoft.Extensions.Localization.ResourceManagerStringLocalizer": "Warning"
     }
   },
