--- a/SchulCloud.Web/SchulCloud.Web/Properties/launchSettings.json
+++ b/SchulCloud.Web/SchulCloud.Web/Properties/launchSettings.json
@@ -12,6 +12,7 @@
       "http": {
         "commandName": "Project",
         "dotnetRunMessages": true,
+        "launchBrowser": true,
         "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
         "applicationUrl": "http://localhost:5066",
         "environmentVariables": {
@@ -21,6 +22,7 @@
       "https": {
         "commandName": "Project",
         "dotnetRunMessages": true,
+        "launchBrowser": true,
         "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
         "applicationUrl": "https://localhost:7004;http://localhost:5066",
         "environmentVariables": {
@@ -29,6 +31,7 @@
       },
       "IIS Express": {
         "commandName": "IISExpress",
+        "launchBrowser": true,
         "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
         "environmentVariables": {
           "ASPNETCORE_ENVIRONMENT": "Development"
