-Improvement: Added IRoleDefaultRoleStore and IRoleColorStore and their imeplementation. -Improvement: Stored the role color as int for simpler parsing. .Improvement: SchulCloudUserManager exported in a new assembly for more modular use. -Improvement: Used a global using declaration to define the user and role type for the application. -Style: Fixed display of the recovery code badge if 2fa isn't enabled.

--- a/SchulCloud.Web/SchulCloud.Web/SchulCloud.Web.csproj
+++ b/SchulCloud.Web/SchulCloud.Web/SchulCloud.Web.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\MailKit.Client\MailKit.Client.csproj" />
+    <ProjectReference Include="..\..\SchulCloud.Store\SchulCloud.Store.csproj" />
     <ProjectReference Include="..\SchulCloud.Web.Client\SchulCloud.Web.Client.csproj" />
     <ProjectReference Include="..\..\SchulCloud.Database\SchulCloud.Database.csproj" />
     <ProjectReference Include="..\..\SchulCloud.ServiceDefaults\SchulCloud.ServiceDefaults.csproj" />
