--- a/SchulCloud.Web/SchulCloud.Web/appsettings.Development.json
+++ b/SchulCloud.Web/SchulCloud.Web/appsettings.Development.json
@@ -15,7 +15,13 @@
   },
   "MailKit": {
     "Client": {
-      "KeepAliveIntervall": "0:0:50"     // MailDev terminates the connection after one minute.
+      "KeepAliveIntervall": "0:0:50" // MailDev terminates the connection after one minute.
+    }
+  },
+  "Identity": {
+    "SignIn": {
+      "RequireConfirmedEmail": false,
+      "RequireConfirmedAccount": false
     }
   }
 }
