--- a/SchulCloud.Web/SchulCloud.Web/appsettings.json
+++ b/SchulCloud.Web/SchulCloud.Web/appsettings.json
@@ -12,7 +12,8 @@
       "RequireUniqueEmail": true
     },
     "SignIn": {
-      "RequireConfirmedEmail": true
+      "RequireConfirmedEmail": true,
+      "RequireConfirmedAccount": true
     },
     "EmailSender": {
       "DisplayedName": "SchulCloud",
