FIDO2 Infrastructure: -Feature: Added supports for FIDO2 credentials to the db and added the corresponding store abstraction with the implementation. -Feature: Added FIDO2 actions and FIDO2 credential accessors in SchulCloudUserManager.

--- a/SchulCloud.Web/SchulCloud.Web/appsettings.Development.json
+++ b/SchulCloud.Web/SchulCloud.Web/appsettings.Development.json
@@ -23,5 +23,12 @@
       "RequireConfirmedEmail": false,
       "RequireConfirmedAccount": false
     }
+  },
+  "Fido2": {
+    "ServerName": "SchulCloud",
+    "ServerDomain": "localhost",
+    "Origins": [
+      "localhost:7004"
+    ]
   }
 }
