--- a/SchulCloud.Database/SchulCloud.Database.csproj
+++ b/SchulCloud.Database/SchulCloud.Database.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Fido2.Models" Version="4.0.0-beta.13" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Analyzers" Version="8.0.8" />
