FIDO2 Credential management -Feature: Added a page to add, view and remove fido2 credentials. -Feature: Added TS namespace and functions for webauthn and a correspondig .NET service. -Feature: Added some missing methods for fido2 credential interaction to SchulCloudUserManager and used options to provide some settings. -Feature: Added some dialogs that may get more use in future.

--- a/SchulCloud.Web/SchulCloud.Web.JS/package.json
+++ b/SchulCloud.Web/SchulCloud.Web.JS/package.json
@@ -9,6 +9,7 @@
   "license": "GPL-3.0-only",
   "description": "",
   "devDependencies": {
+    "@microsoft/dotnet-js-interop": "^8.0.0",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.6",
     "rollup": "^4.20.0",
