--- a/SchulCloud.Web/SchulCloud.Web/appsettings.json
+++ b/SchulCloud.Web/SchulCloud.Web/appsettings.json
@@ -19,6 +19,10 @@
       "DisplayedName": "SchulCloud",
       "Email": "no-reply@schulcloud"
     },
+    "Fido2": {
+      "AttestationConveyancePreference": "Direct",
+      "UserVerificationRequirement": "Preferred"
+    },
     "Tokens": {
       "AuthenticatorIssuer": "SchulCloud"
     },
@@ -27,6 +31,9 @@
         "TokenLifespan": "1:0:0"
       }
     }
+  },
+  "Fido2": {
+    "ServerName": "SchulCloud"
   },
   "RequestLocalization": {
     "ApplyCurrentCultureToResponseHeaders": true,
@@ -43,7 +50,7 @@
       "de"
     ]
   },
-  "Presentation": {
-    "ApplicationName": "SchulCloud"
+    "Presentation": {
+      "ApplicationName": "SchulCloud"
+    }
   }
-}
