--- a/SchulCloud.Web/SchulCloud.Web/appsettings.Development.json
+++ b/SchulCloud.Web/SchulCloud.Web/appsettings.Development.json
@@ -10,6 +10,7 @@
       "Microsoft.Extensions.Localization.ResourceManagerStringLocalizer": "Warning"
     }
   },
+  "DetailedErrors": true,
   "RequestLimiter": {
     "DefaultTimeout": "0:0:5"
   },
@@ -25,10 +26,10 @@
     }
   },
   "Fido2": {
-    "ServerName": "SchulCloud",
     "ServerDomain": "localhost",
     "Origins": [
-      "localhost:7004"
+      "http://localhost:5066",
+      "https://localhost:7004"
     ]
   }
 }
