--- a/SchulCloud.Web/SchulCloud.Web/SchulCloud.Web.csproj
+++ b/SchulCloud.Web/SchulCloud.Web/SchulCloud.Web.csproj
@@ -8,7 +8,7 @@
 	
   <ItemGroup>
     <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.1.0" />
-    <PackageReference Include="Blazor.Bootstrap" Version="3.0.0-preview.3" />
+    <PackageReference Include="Blazor.Bootstrap" Version="3.0.0" />
     <PackageReference Include="Blazored.FluentValidation" Version="2.2.0" />
     <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
     <PackageReference Include="Fido2.AspNet" Version="4.0.0-beta.13" />
