Added a favicon -Feature: Added favicons to config and load them into head area. -Feature: Added favicon to both layouts.

--- a/SchulCloud.Web/SchulCloud.Web/appsettings.json
+++ b/SchulCloud.Web/SchulCloud.Web/appsettings.json
@@ -57,6 +57,13 @@
     }
   },
   "Presentation": {
-    "ApplicationName": "SchulCloud"
+    "ApplicationName": "SchulCloud",
+    "Favicons": [
+      {
+        "Path": "/_static/favicon.svg",
+        "MimeType": "image/svg",
+        "Sizes": "any"
+      }
+    ]
   }
 }
