Improved store structure of credentials and login attempts. -Improvement: Used a simular structure like UserLogin for UserCredential and UserLoginAttempt -Improvement: Summarized the all db migrations into one. -Improvement: Improved readability of SchulCloudUserManager by removing the unnececary type parameters.

--- a/SchulCloud.Database/SchulCloud.Database.csproj
+++ b/SchulCloud.Database/SchulCloud.Database.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\SchulCloud.Store\SchulCloud.Store.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
