Added pages to view every login attempt and a detailed view -Feature: Added a page to show every login attempt. -Feature: Added a page to view a login attempt in detail. -Refactor: Renamed an enum. -Fix: Fixed a bug in SchulCloudUserStore.RemoveLoginAttemptAsync.

--- a/SchulCloud.Web/SchulCloud.Web/appsettings.json
+++ b/SchulCloud.Web/SchulCloud.Web/appsettings.json
@@ -56,6 +56,9 @@
       "PreventDuplicates": false
     }
   },
+  "GoogleMaps": {
+    "ApiKey": "<Your Apikey>"
+  },
   "Presentation": {
     "ApplicationName": "SchulCloud",
     "Favicons": [
