--- a/SchulCloud.Web/SchulCloud.Web/SchulCloud.Web.csproj
+++ b/SchulCloud.Web/SchulCloud.Web/SchulCloud.Web.csproj
@@ -4,11 +4,13 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>3aada3c3-44d9-44cb-8e25-9be67af78b8d</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.2.0" />
     <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
+    <PackageReference Include="BlazorGoogleMaps" Version="4.7.14" />
     <PackageReference Include="Fido2.AspNet" Version="4.0.0-beta.13" />
     <PackageReference Include="Humanizer.Core" Version="2.14.1" />
     <PackageReference Include="Humanizer.Core.de" Version="2.14.1" />
