--- a/SchulCloud.Web/SchulCloud.Web/appsettings.json
+++ b/SchulCloud.Web/SchulCloud.Web/appsettings.json
@@ -3,6 +3,7 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning",
+      "MudBlazor.KeyInterceptorService": "Information",
       "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
     }
   },
