--- a/SchulCloud.Database/SchulCloud.Database.csproj
+++ b/SchulCloud.Database/SchulCloud.Database.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Fido2.Models" Version="4.0.0-beta.13" />
+    <PackageReference Include="Mapster" Version="7.4.0" />
+    <PackageReference Include="Mapster.EFCore" Version="5.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Analyzers" Version="8.0.10" />
