--- a/SchulCloud.Web/SchulCloud.Web/SchulCloud.Web.csproj
+++ b/SchulCloud.Web/SchulCloud.Web/SchulCloud.Web.csproj
@@ -18,10 +18,10 @@
     <PackageReference Include="Microsoft.Extensions.Localization" Version="8.0.10" />
     <PackageReference Include="MudBlazor" Version="7.15.0" />
     <PackageReference Include="MudBlazor.FontIcons.MaterialSymbols" Version="1.2.0" />
-    <PackageReference Include="MyCSharp.HttpUserAgentParser" Version="3.0.6" />
+    <PackageReference Include="MyCSharp.HttpUserAgentParser" Version="3.0.8" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="QRCoder" Version="1.6.0" />
-    <PackageReference Include="Suiram1.BlazorRoutesGenerator" Version="1.0.0" />
+    <PackageReference Include="Suiram1.BlazorRoutesGenerator" Version="1.1.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -30,19 +30,25 @@
     <ProjectReference Include="..\..\SchulCloud.Database\SchulCloud.Database.csproj" />
     <ProjectReference Include="..\..\SchulCloud.ServiceDefaults\SchulCloud.ServiceDefaults.csproj" />
   </ItemGroup>
+    
+  <ItemGroup>
+    <Folder Include="wwwroot\dist\" />
+    <Folder Include="wwwroot\dist\js\" />
+  </ItemGroup>
 
   <Target Name="CopyIsolatedCss" AfterTargets="Build">
-    <Copy SourceFiles="$(IntermediateOutputPath)scopedcss\projectbundle\$(PackageId).bundle.scp.css" DestinationFiles="wwwroot\css\$(PackageId).bundle.scp.css" ContinueOnError="true" />
+    <Copy SourceFiles="$(IntermediateOutputPath)scopedcss\bundle\$(PackageId).styles.css" DestinationFiles="wwwroot\dist\css\AppBundle.styles.css" ContinueOnError="true" />
   </Target>
-    
+
+  <Target Name="BuildJS" AfterTargets="Build">
+    <Exec Command="npm install" WorkingDirectory="$(ProjectDir)\" />
+    <Exec Command="npx rollup -c" WorkingDirectory="$(ProjectDir)\" />
+  </Target>
+
   <ItemGroup>
     <Content Update="wwwroot\**\*">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-  </ItemGroup>
-    
-  <ItemGroup>
-    <Folder Include="wwwroot\css\" />
   </ItemGroup>
     
 </Project>
