--- a/SchulCloud.Web/SchulCloud.Web/tsconfig.json
+++ b/SchulCloud.Web/SchulCloud.Web/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "compileOnSave": true,
   "compilerOptions": {
     "target": "ES2022",
     "module": "ESNext",
@@ -6,7 +7,6 @@
       "ES2022",
       "DOM"
     ],
-    "sourceMap": true,
     "noEmitOnError": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
