Added basic permission system -Feature: Added different permission levels and 'start' permissions. -Feature: Added policy generation for different permission with different levels. -Feature: Added store and user manager implementations for user permissions.

--- a/SchulCloud.Database/SchulCloud.Database.csproj
+++ b/SchulCloud.Database/SchulCloud.Database.csproj
@@ -25,6 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\SchulCloud.Authorization\SchulCloud.Authorization.csproj" />
     <ProjectReference Include="..\SchulCloud.Store\SchulCloud.Store.csproj" />
   </ItemGroup>
 
