--- a/SchulCloud.Frontend/SchulCloud.Frontend.csproj
+++ b/SchulCloud.Frontend/SchulCloud.Frontend.csproj
@@ -26,6 +26,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MailKit.Client\MailKit.Client.csproj" />
+    <ProjectReference Include="..\SchulCloud.Authorization\SchulCloud.Authorization.csproj" />
     <ProjectReference Include="..\SchulCloud.Store\SchulCloud.Store.csproj" />
     <ProjectReference Include="..\SchulCloud.Database\SchulCloud.Database.csproj" />
     <ProjectReference Include="..\SchulCloud.ServiceDefaults\SchulCloud.ServiceDefaults.csproj" />
