--- a/SchulCloud.Frontend/appsettings.json
+++ b/SchulCloud.Frontend/appsettings.json
@@ -31,6 +31,10 @@
       "DataProtectionTokenProvider": {
         "TokenLifespan": "1:0:0"
       }
+    },
+    "ApiKeys": {
+      "KeyPrefix": "sc",
+      "GlobalSalt": "<A salt to secure the api keys>"
     }
   },
   "Fido2": {
