General improvements -Feature: Added MudBlazor localization -Improvement: Added for security keys and api keys max string lenghts to the text fields -Style: Added the buttons in the login attempt placeholder -Style: Shows data names in login attempt placeholder

--- a/SchulCloud.Frontend/SchulCloud.Frontend.csproj
+++ b/SchulCloud.Frontend/SchulCloud.Frontend.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Microsoft.Extensions.Localization" Version="8.0.10" />
     <PackageReference Include="MudBlazor" Version="7.15.0" />
     <PackageReference Include="MudBlazor.FontIcons.MaterialSymbols" Version="1.2.0" />
+    <PackageReference Include="MudBlazor.Translations" Version="1.5.1" />
     <PackageReference Include="MyCSharp.HttpUserAgentParser" Version="3.0.8" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="QRCoder" Version="1.6.0" />
