Some improvements -Improvement: Removed _static prefix from static resources. -Refactor: Moved WebAuthnService and LoginLogBackgroundService into their own namespaces and renamed them. -Refactor: Moved some

--- a/SchulCloud.Frontend/appsettings.json
+++ b/SchulCloud.Frontend/appsettings.json
@@ -46,14 +46,8 @@
       "Culture": "en",
       "UICulture": "en"
     },
-    "SupportedCultures": [
-      "en",
-      "de"
-    ],
-    "SupportedUICultures": [
-      "en",
-      "de"
-    ]
+    "SupportedCultures": [ "en", "de" ],
+    "SupportedUICultures": [ "en", "de" ]
   },
   "Mud": {
     "Snackbar": {
@@ -68,7 +62,7 @@
     "ApplicationName": "SchulCloud",
     "Favicons": [
       {
-        "Path": "/_static/favicon.svg",
+        "Path": "/favicon.svg",
         "MimeType": "image/svg",
         "Sizes": "any"
       }
