Updated to .NET 9 and Aspire 9 -Feature: Added health checks to aspire. -Feature: Added a health check to verify that all hosted services are alive to the frontend. -Improvement: Use the AddParameterFromConfiguration for the parameters. -Improvement: Used MapStaticAssets instead of UseStaticFiles.

--- a/SchulCloud.AppHost/appsettings.json
+++ b/SchulCloud.AppHost/appsettings.json
@@ -6,10 +6,12 @@
       "Aspire.Hosting.Dcp": "Warning"
     }
   },
-  "Parameters": {
-    "postgresUsername": "<postgres username>",
-    "postgresPassword": "<postgres password>",
-    "maildevUsername": "<maildev username>",
-    "maildevPassword": "<maildev password>"
+  "postgres-server": {
+    "Username": "<postgres username>",
+    "Password": "<postgres password>"
+  },
+  "maildev": {
+    "Username": "<maildev username>",
+    "Password": "<maildev password>"
   }
 }
