Added reverse proxy -Feature: Added a reverse proxy to the aspire configuration. -Improvement: Added ot the web frontend a WaitFor mail dev.

--- a/SchulCloud.AppHost/appsettings.json
+++ b/SchulCloud.AppHost/appsettings.json
@@ -13,5 +13,24 @@
   "maildev": {
     "Username": "<maildev username>",
     "Password": "<maildev password>"
+  },
+  "ReverseProxy": {
+    "Clusters": {
+      "WebFrontend-Cluster": {
+        "Destinations": {
+          "Destination0": {
+            "Address": "https+http://web-frontend"
+          }
+        }
+      }
+    },
+    "Routes": {
+      "WebFrontend": {
+        "ClusterId": "WebFrontend-Cluster",
+        "Match": {
+          "Path": "{**catch-all}"
+        }
+      }
+    }
   }
 }
