Added the REST API project with basic setup. -Feature: Added rest api project and the reverse proxy config. -Feature: Added API versioning and swagger to the API. -Improvement: Added http and https port to yarp.

--- a/SchulCloud.AppHost/SchulCloud.AppHost.csproj
+++ b/SchulCloud.AppHost/SchulCloud.AppHost.csproj
@@ -21,6 +21,7 @@
     <ProjectReference Include="..\SchulCloud.DbManager\SchulCloud.DbManager.csproj" />
     <ProjectReference Include="..\SchulCloud.Frontend\SchulCloud.Frontend.csproj" />
     <ProjectReference Include="..\Aspire.Hosting.MailDev\Aspire.Hosting.MailDev.csproj" IsAspireProjectResource="false" />
+    <ProjectReference Include="..\SchulCloud.RestApi\SchulCloud.RestApi.csproj" />
     <ProjectReference Include="..\SchulCloud.ServiceDefaults\SchulCloud.ServiceDefaults.csproj" IsAspireProjectResource="false" />
   </ItemGroup>
 
