--- a/SchulCloud.AppHost/appsettings.json
+++ b/SchulCloud.AppHost/appsettings.json
@@ -22,6 +22,13 @@
             "Address": "https+http://web-frontend"
           }
         }
+      },
+      "RestApi-Cluster": {
+        "Destinations": {
+          "Destination0": {
+            "Address": "https+http://rest-api"
+          }
+        }
       }
     },
     "Routes": {
@@ -30,6 +37,15 @@
         "Match": {
           "Path": "{**catch-all}"
         }
+      },
+      "RestApi": {
+        "ClusterId": "RestApi-Cluster",
+        "Match": {
+          "Path": "/api/rest/{**remainder}"
+        },
+        "Transforms": [
+          { "PathRemovePrefix": "/api/rest" }
+        ]
       }
     }
   }
