Added link to the API docs to the view and some other changes -Feature: Added links to the API docs to the API keys page. -Feature: Maked the mappging of swagger enablable. -Improvement: Moved BasePath config into service defaults. -Fix: Fixed Fido2 Auth by adding the gateway ports to the origins.

--- a/SchulCloud.Frontend/appsettings.json
+++ b/SchulCloud.Frontend/appsettings.json
@@ -40,6 +40,11 @@
   "Fido2": {
     "ServerName": "SchulCloud"
   },
+  "Api": {
+    "DocumentationLinks": {
+      "REST API": "/api/rest/swagger/index.html"
+    }
+  },
   "RequestLocalization": {
     "ApplyCurrentCultureToResponseHeaders": true,
     "DefaultRequestCulture": {
