--- a/SchulCloud.RestApi/appsettings.json
+++ b/SchulCloud.RestApi/appsettings.json
@@ -6,5 +6,9 @@
     }
   },
   "AllowedHosts": "*",
-  "BasePath": "/api/rest"
+  "BasePath": "/api/rest",
+  "Swagger": {
+    "Enabled": true,
+    "UiEnabled": true
+  }
 }
