--- a/SchulCloud.ServiceDefaults/SchulCloud.ServiceDefaults.csproj
+++ b/SchulCloud.ServiceDefaults/SchulCloud.ServiceDefaults.csproj
@@ -11,6 +11,8 @@
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
 
 	<PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.2.2" />
+
+	<PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="8.0.1" />
 	<PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="9.0.0" />
     <PackageReference Include="Microsoft.Extensions.ServiceDiscovery" Version="9.0.0" />
     <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.10.0" />
