Logging and error handling improvements for the rest API -Feature: Added more logging to the action filters. -Improvement: Centralized the use of BasePath with a own method. -Improvement: Adjusted the usage of the action filters. -Improvement: Improved error responses. -Improvement: Added generation of problem+json examples. -Improvement: Automated the generation of "Requires the permission..." -Refactor: Improved the structure of the rest API

--- a/SchulCloud.RestApi/SchulCloud.RestApi.csproj
+++ b/SchulCloud.RestApi/SchulCloud.RestApi.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -28,6 +28,9 @@
     <Using Include="SchulCloud.RestApi.RouteConstants">
       <Static>True</Static>
     </Using>
+	<Using Include="SchulCloud.RestApi.Filtering" />
+	<Using Include="SchulCloud.RestApi.Sorting" />
+	<Using Include="SchulCloud.RestApi.Pagination" />
   </ItemGroup>
 
   <ItemGroup>
