Added functionality to the DbCleaner -Feature: Added cleaning of api keys and login attempts to the db cleaner. -Feature: Added db cleanup command to db. -Improvement: Moved DbInit logic into a seperate service.

--- a/SchulCloud.Database/SchulCloud.Database.csproj
+++ b/SchulCloud.Database/SchulCloud.Database.csproj
@@ -27,6 +27,7 @@
   <ItemGroup>
     <ProjectReference Include="..\SchulCloud.Authorization\SchulCloud.Authorization.csproj" />
     <ProjectReference Include="..\SchulCloud.Identity\SchulCloud.Identity.csproj" />
+    <ProjectReference Include="..\SchulCloud.ServiceDefaults\SchulCloud.ServiceDefaults.csproj" />
   </ItemGroup>
 
   <ItemGroup>
