--- a/SchulCloud.DbManager/appsettings.Development.json
+++ b/SchulCloud.DbManager/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Cleaner": {
+    "Interval": "0:1:0",
+    "Timeout": "0:0:30"
   }
 }
