--- a/SchulCloud.DbManager/appsettings.json
+++ b/SchulCloud.DbManager/appsettings.json
@@ -7,11 +7,16 @@
       "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
     }
   },
-  "DbInitializer": {
+  "Initializer": {
     "DefaultUser": {
       "Username": "<name>",
       "Email": "<email>",
       "Password": "<password>"
     }
+  },
+  "Cleaner": {
+    "Interval": "0:30:0",
+    "Timeout": "0:1:0",
+    "MaxLoginAttemptsPerUser": 1000
   }
 }
