--- a/SchulCloud.DbManager/SchulCloud.DbManager.csproj
+++ b/SchulCloud.DbManager/SchulCloud.DbManager.csproj
@@ -16,6 +16,9 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="OpenTelemetry.Instrumentation.Quartz" Version="1.10.0-beta.1" />
+    <PackageReference Include="Quartz" Version="3.13.1" />
+    <PackageReference Include="Quartz.AspNetCore" Version="3.13.1" />
   </ItemGroup>
 
   <ItemGroup>
