Added an api key to the commands -Feature: Added static api key auth to the commands. -Feature: Added an configurable request limiter to the commands. -Chore: Removed obsolete configuration form the app host.

--- a/SchulCloud.AppHost/appsettings.json
+++ b/SchulCloud.AppHost/appsettings.json
@@ -14,6 +14,7 @@
     "Username": "<maildev username>",
     "Password": "<maildev password>"
   },
+  "CommandApiKey": "<api key for commands>",
   "ReverseProxy": {
     "Clusters": {
       "WebFrontend-Cluster": {
