--- a/SchulCloud.DbManager/appsettings.json
+++ b/SchulCloud.DbManager/appsettings.json
@@ -18,5 +18,11 @@
     "Interval": "0:30:0",
     "Timeout": "0:1:0",
     "MaxLoginAttemptsPerUser": 1000
+  },
+  "Commands": {
+    "RateLimiter": {
+      "Window": "0:0:10",
+      "PermitLimit": 5
+    }
   }
 }
