--- a/SchulCloud.Frontend/appsettings.json
+++ b/SchulCloud.Frontend/appsettings.json
@@ -72,5 +72,11 @@
         "Sizes": "any"
       }
     ]
+  },
+  "Commands": {
+    "RateLimiter": {
+      "Window": "0:0:10",
+      "PermitLimit": 5
+    }
   }
 }
