--- a/SchulCloud.RestApi/appsettings.json
+++ b/SchulCloud.RestApi/appsettings.json
@@ -10,5 +10,11 @@
   "Swagger": {
     "Enabled": true,
     "UiEnabled": true
+  },
+  "Commands": {
+    "RateLimiter": {
+      "Window": "0:0:10",
+      "PermitLimit": 5
+    }
   }
 }
