Some minor improvements -Improvement: Adapted the static assets path to the _content pattern of blazor. -Improvement: Disabled source map generation for ts code if the environment isn't development. -Improvement: Switched place of api key tab and login attempts tab. -Chore: Updated some NuGet packages and adapted the fido2 interaction. -Fix: Synchronised the namespace of AppUserManager.

--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,7 @@ bld/
 .vs/
 
 # excluded because they will be copied/generated on every build
-dist/
+_content/
 
 # Visual Studio 2017 auto generated files
 Generated\ Files/
