--- a/SchulCloud.Identity/SchulCloud.Identity.csproj
+++ b/SchulCloud.Identity/SchulCloud.Identity.csproj
@@ -11,7 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Fido2" Version="4.0.0-beta.13" />
+    <PackageReference Include="Fido2" Version="4.0.0-beta.16" />
+    <PackageReference Include="Mapster" Version="7.4.0" />
     <PackageReference Include="MyCSharp.HttpUserAgentParser" Version="3.0.9" />
   </ItemGroup>
 
