--- a/SchulCloud.Frontend/SchulCloud.Frontend.csproj
+++ b/SchulCloud.Frontend/SchulCloud.Frontend.csproj
@@ -13,12 +13,12 @@
     <PackageReference Include="Fido2.AspNet" Version="4.0.0-beta.16" />
     <PackageReference Include="Humanizer.Core" Version="2.14.1" />
     <PackageReference Include="Humanizer.Core.de" Version="2.14.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Localization" Version="9.0.0" />
-    <PackageReference Include="MudBlazor" Version="7.15.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Localization" Version="9.0.1" />
+    <PackageReference Include="MudBlazor" Version="8.1.0" />
     <PackageReference Include="MudBlazor.FontIcons.MaterialSymbols" Version="1.2.0" />
-    <PackageReference Include="MudBlazor.Translations" Version="1.6.0" />
-    <PackageReference Include="MyCSharp.HttpUserAgentParser" Version="3.0.9" />
+    <PackageReference Include="MudBlazor.Translations" Version="2.0.0" />
+    <PackageReference Include="MyCSharp.HttpUserAgentParser" Version="3.0.11" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="OpenTelemetry.Instrumentation.Quartz" Version="1.10.0-beta.1" />
     <PackageReference Include="QRCoder" Version="1.6.0" />
@@ -62,8 +62,7 @@
 
   <!-- Copies isolated css file into the asset structure -->
   <Target Name="_CopyIsolatedCSS" AfterTargets="Build">
-    <Copy SourceFiles="$(IntermediateOutputPath)scopedcss\bundle\$(PackageId).styles.css"
-          DestinationFiles="wwwroot\_content\$(PackageId).styles.css" />
+    <Copy SourceFiles="$(IntermediateOutputPath)scopedcss\bundle\$(PackageId).styles.css" DestinationFiles="wwwroot\_content\$(PackageId).styles.css" />
   </Target>
 
   <Target Name="_TranspileTypeScript" AfterTargets="Build">
